Athena_Widget/Package/Xm/XmXm.pp


  PXmTextVerifyCallbackStructWcs = ^TXmTextVerifyCallbackStructWcs;
  TXmTextVerifyCallbackStructWcs = record
      reason : longint;
      event : PXEvent;
      doit : TBoolean;
      currInsert : longint;
      newInsert : longint;
      startPos : longint;
      endPos : longint;
      text : TXmTextBlockWcs;
    end;
  TXmTextVerifyPtrWcs = PXmTextVerifyCallbackStructWcs;
  PXmTextVerifyPtrWcs = ^TXmTextVerifyPtrWcs;
{ functions renamed after 1.0 release due to resource name overlap  }

const
  XmTextGetTopPosition = XmTextGetTopCharacter;  
  XmTextSetTopPosition = XmTextSetTopCharacter;  
  XmCOPY_FAILED = 0;  
  XmCOPY_SUCCEEDED = 1;  
  XmCOPY_TRUNCATED = 2;  
{***********************************************************************
 *									*
 *  DIALOG defines..  BulletinBoard and things common to its subclasses *
 *          CommandBox    MessageBox    Selection    FileSelection      *
 *									*
 *********************************************************************** }
{ child type defines for Xm...GetChild()  }
type
  Pblabla = ^Tblabla;
  Tblabla =  Longint;
  Const
    XmDIALOG_NONE = 0;
    XmDIALOG_APPLY_BUTTON = 1;
    XmDIALOG_CANCEL_BUTTON = 2;
    XmDIALOG_DEFAULT_BUTTON = 3;
    XmDIALOG_OK_BUTTON = 4;
    XmDIALOG_FILTER_LABEL = 5;
    XmDIALOG_FILTER_TEXT = 6;
    XmDIALOG_HELP_BUTTON = 7;
    XmDIALOG_LIST = 8;
    XmDIALOG_LIST_LABEL = 9;
    XmDIALOG_MESSAGE_LABEL = 10;
    XmDIALOG_SELECTION_LABEL = 11;
    XmDIALOG_SYMBOL_LABEL = 12;
    XmDIALOG_TEXT = 13;
    XmDIALOG_SEPARATOR = 14;
    XmDIALOG_DIR_LIST = 15;
    XmDIALOG_DIR_LIST_LABEL = 16;
;
  XmDIALOG_HISTORY_LIST = XmDIALOG_LIST;  
  XmDIALOG_PROMPT_LABEL = XmDIALOG_SELECTION_LABEL;  
  XmDIALOG_VALUE_TEXT = XmDIALOG_TEXT;  
  XmDIALOG_COMMAND_TEXT = XmDIALOG_TEXT;  
  XmDIALOG_FILE_LIST = XmDIALOG_LIST;  
  XmDIALOG_FILE_LIST_LABEL = XmDIALOG_LIST_LABEL;  
{  dialog style defines   }
type
  Pblabla = ^Tblabla;
  Tblabla =  Longint;
  Const
    XmDIALOG_MODELESS = 0;
    XmDIALOG_PRIMARY_APPLICATION_MODAL = 1;
    XmDIALOG_FULL_APPLICATION_MODAL = 2;
    XmDIALOG_SYSTEM_MODAL = 3;
;
{ The following is for compatibility only. Its use is deprecated.
  }
  XmDIALOG_APPLICATION_MODAL = XmDIALOG_PRIMARY_APPLICATION_MODAL;  
{***********************************************************************
 * XmSelectionBox, XmFileSelectionBox and XmCommand - misc. stuff       *
 ********************************************************************** }
{ Defines for Selection child placement
 }
type
  Pblabla = ^Tblabla;
  Tblabla =  Longint;
  Const
    XmPLACE_TOP = 0;
    XmPLACE_ABOVE_SELECTION = 1;
    XmPLACE_BELOW_SELECTION = 2;
;
{ Defines for file type mask:
 }
  XmFILE_DIRECTORY = 1 shl 0;  
  XmFILE_REGULAR = 1 shl 1;  
  XmFILE_ANY_TYPE = XmFILE_DIRECTORY or XmFILE_REGULAR;  
{ Defines for selection dialog type:
 }
type
  Pblabla = ^Tblabla;
  Tblabla =  Longint;
  Const
    XmDIALOG_WORK_AREA = 0;
    XmDIALOG_PROMPT = 1;
    XmDIALOG_SELECTION = 2;
    XmDIALOG_COMMAND = 3;
    XmDIALOG_FILE_SELECTION = 4;
;
{***********************************************************************
 *  XmMessageBox           stuff not common to other dialogs            *
 ********************************************************************** }
{ defines for dialog type  }
type
  Pblabla = ^Tblabla;
  Tblabla =  Longint;
  Const
    XmDIALOG_TEMPLATE = 0;
    XmDIALOG_ERROR = 1;
    XmDIALOG_INFORMATION = 2;
    XmDIALOG_MESSAGE = 3;
    XmDIALOG_QUESTION = 4;
    XmDIALOG_WARNING = 5;
    XmDIALOG_WORKING = 6;
;
{  Traversal types   }
type
  PXmVisibility = ^TXmVisibility;
  TXmVisibility =  Longint;
  Const
    XmVISIBILITY_UNOBSCURED = 0;
    XmVISIBILITY_PARTIALLY_OBSCURED = 1;
    XmVISIBILITY_FULLY_OBSCURED = 2;
;
type
  PXmTraversalDirection = ^TXmTraversalDirection;
  TXmTraversalDirection =  Longint;
  Const
    XmTRAVERSE_CURRENT = 0;
    XmTRAVERSE_NEXT = 1;
    XmTRAVERSE_PREV = 2;
    XmTRAVERSE_HOME = 3;
    XmTRAVERSE_NEXT_TAB_GROUP = 4;
    XmTRAVERSE_PREV_TAB_GROUP = 5;
    XmTRAVERSE_UP = 6;
    XmTRAVERSE_DOWN = 7;
    XmTRAVERSE_LEFT = 8;
    XmTRAVERSE_RIGHT = 9;
    XmTRAVERSE_GLOBALLY_FORWARD = 10;
    XmTRAVERSE_GLOBALLY_BACKWARD = 11;
;
type
  PXmTraverseObscuredCallbackStruct = ^TXmTraverseObscuredCallbackStruct;
  TXmTraverseObscuredCallbackStruct = record
      reason : longint;
      event : PXEvent;
      traversal_destination : TWidget;
      direction : TXmTraversalDirection;
    end;

  PXmNavigationType = ^TXmNavigationType;
  TXmNavigationType = byte;
{**********************************************************************
 *
 * SimpleMenu declarations and definitions.
 *
 ********************************************************************** }

  PXmButtonType = ^TXmButtonType;
  TXmButtonType = byte;

  PXmButtonTypeTable = ^TXmButtonTypeTable;
  TXmButtonTypeTable = PXmButtonType;

  PXmKeySymTable = ^TXmKeySymTable;
  TXmKeySymTable = PKeySym;

  PXmStringCharSetTable = ^TXmStringCharSetTable;
  TXmStringCharSetTable = PXmStringCharSet;

  Pblabla = ^Tblabla;
  Tblabla =  Longint;
  Const
    XmPUSHBUTTON = 1;
    XmTOGGLEBUTTON = 2;
    XmRADIOBUTTON = 3;
    XmCASCADEBUTTON = 4;
    XmSEPARATOR = 5;
    XmDOUBLE_SEPARATOR = 6;
    XmTITLE = 7;
;
  XmCHECKBUTTON = XmTOGGLEBUTTON;  
{**********************************************************************
 *
 * BitmapConversionModel
 *
 ********************************************************************** }
type
  Pblabla = ^Tblabla;
  Tblabla =  Longint;
  Const
    XmMATCH_DEPTH = 0;
    XmDYNAMIC_DEPTH = 1;
;
{***********************************************************************
 *  PrintShell defines
 *********************************************************************** }
type
  Pblabla = ^Tblabla;
  Tblabla =  Longint;
  Const
    XmPDM_NOTIFY_FAIL = 0;
    XmPDM_NOTIFY_SUCCESS = 1;
;
{***********************************************************************
 *  MultiList defines
 *********************************************************************** }
type
  Pblabla = ^Tblabla;
  Tblabla =  Longint;
  Const
    XmMULTILIST_FOUND = 0;
    XmMULTILIST_NOT_FOUND = 1;
;
{***********************************************************************
 *  DropDown defines
 *********************************************************************** }
type
  Pblabla = ^Tblabla;
  Tblabla =  Longint;
  Const
    XmDROPDOWN_LABEL = 0;
    XmDROPDOWN_TEXT = 1;
    XmDROPDOWN_ARROW_BUTTON = 2;
    XmDROPDOWN_LIST = 3;
;
{ This one cannot be put at the beginning because it needs 
   XmStringTable  }
{$include <Xm/TxtPropCv.h>}
{*******    BaseClass.c    ******* }
type

  TXmResourceBaseProc = function (para1:TWidget; para2:TXtPointer):TXtPointer;cdecl;

  PXmSecondaryResourceDataRec = ^TXmSecondaryResourceDataRec;
  TXmSecondaryResourceDataRec = record
      base_proc : TXmResourceBaseProc;
      client_data : TXtPointer;
      name : TString;
      res_class : TString;
      resources : TXtResourceList;
      num_resources : TCardinal;
    end;
  TXmSecondaryResourceData = PXmSecondaryResourceDataRec;
  PXmSecondaryResourceData = ^TXmSecondaryResourceData;
{*******    Public Function Declarations for BaseClass.c    ******* }

function XmGetSecondaryResourceData(w_class:TWidgetClass; secondaryDataRtn:PPXmSecondaryResourceData):TCardinal;cdecl;external;
{*******    End Public Function Declarations    ******* }
{*******    Public Function Declarations for ImageCache.c    ******* }
function XmInstallImage(image:PXImage; image_name:Pchar):TBoolean;cdecl;external;
function XmUninstallImage(image:PXImage):TBoolean;cdecl;external;
function XmGetPixmap(screen:PScreen; image_name:Pchar; foreground:TPixel; background:TPixel):TPixmap;cdecl;external;
function XmGetPixmapByDepth(screen:PScreen; image_name:Pchar; foreground:TPixel; background:TPixel; depth:longint):TPixmap;cdecl;external;
function XmDestroyPixmap(screen:PScreen; pixmap:TPixmap):TBoolean;cdecl;external;
{*******    End Public Function Declarations    ******* }
{*******    Public Function Declarations for Resolve.c    ******* }
{-- XmeResolvePartOffsets is defined in XmP.h.
     These also belong there but for source compatibility, we let 
     them here ---  }
type
  PXmOffset = ^TXmOffset;
  TXmOffset = longint;

  PXmOffsetPtr = ^TXmOffsetPtr;
  TXmOffsetPtr = PXmOffset;

procedure XmResolveAllPartOffsets(w_class:TWidgetClass; offset:PXmOffsetPtr; constraint_offset:PXmOffsetPtr);cdecl;external;
procedure XmResolvePartOffsets(w_class:TWidgetClass; offset:PXmOffsetPtr);cdecl;external;
{*******    End Public Function Declarations    ******* }
{*******    Public Function Declarations for Xm.c    ******* }
procedure XmUpdateDisplay(w:TWidget);cdecl;external;
function XmObjectAtPoint(wid:TWidget; x:TPosition; y:TPosition):TWidget;cdecl;external;
function XmWidgetGetBaselines(wid:TWidget; baselines:PPDimension; line_count:Plongint):TBoolean;cdecl;external;
function XmWidgetGetDisplayRect(wid:TWidget; displayrect:PXRectangle):TBoolean;cdecl;external;
{*******    End Public Function Declarations    ******* }
{*******    Primitive.c    ******* }
{*******    Public Function Declarations for Primitive.c    ******* }
{*******    End Public Function Declarations    ******* }
{*******    Public Function Declarations for ResConvert.c    ******* }
procedure XmCvtStringToUnitType(args:TXrmValuePtr; num_args:PCardinal; from_val:PXrmValue; to_val:PXrmValue);cdecl;external;
function XmRegisterSegmentEncoding(fontlist_tag:Pchar; ct_encoding:Pchar):Pchar;cdecl;external;
function XmMapSegmentEncoding(fontlist_tag:Pchar):Pchar;cdecl;external;
function XmCvtCTToXmString(text:Pchar):TXmString;cdecl;external;
function XmCvtTextToXmString(display:PDisplay; args:TXrmValuePtr; num_args:PCardinal; from_val:PXrmValue; to_val:PXrmValue; 
           converter_data:PXtPointer):TBoolean;cdecl;external;
function XmCvtXmStringToCT(_string:TXmString):Pchar;cdecl;external;
function XmCvtXmStringToText(display:PDisplay; args:TXrmValuePtr; num_args:PCardinal; from_val:PXrmValue; to_val:PXrmValue; 
           converter_data:PXtPointer):TBoolean;cdecl;external;
{$ifdef UTF8_SUPPORTED}
function XmCvtXmStringToUTF8String(_string:TXmString):Pchar;cdecl;external;
{$endif}
{*******    End Public Function Declarations    ******* }
{*******    Public Function Declarations for ResInd.c    ******* }
